--- a/srcs/nginx.conf
+++ b/srcs/nginx.conf
@@ -2,6 +2,30 @@ server {
 	listen 80;
 	listen [::]:80;
 
+	root /var/www/localhost;
+	# Add index.php to the list if you are using PHP
+	index index.php index.html index.htm index.nginx-debian.html;
+	location /{
+		# First attempt to serve request as file, then
+		# as directory, then fall back to displaying a 404.
+		try_files $uri $uri/ =404;
+		autoindex on;
+	}
+	server_name localhost;
+	# pass PHP scripts to FastCGI server
+	#
+	location ~ \.php$ {
+		include snippets/fastcgi-php.conf;
+	#
+	#	# With php-fpm (or other unix sockets):
+		fastcgi_pass unix:/run/php/php7.3-fpm.sock;
+	#	# With php-cgi (or other tcp sockets):
+	#	fastcgi_pass 127.0.0.1:9000;
+	}
+	return 301 https://$host$request_uri;
+}
+
+server {
 	listen 443 ssl;
 	listen [::]:443 ssl;
 
@@ -12,7 +36,7 @@ server {
 	# Add index.php to the list if you are using PHP
 	index index.php index.html index.htm index.nginx-debian.html;
 
-	server_name _;
+	server_name localhost;
 
 	location /{
 		# First attempt to serve request as file, then
@@ -31,5 +55,4 @@ server {
 	#	# With php-cgi (or other tcp sockets):
 	#	fastcgi_pass 127.0.0.1:9000;
 	}
-
 }
